# chatbot-cli

./: Cargo.toml
src/: main.rs  openai.rs
