[package]
name = "chatbot-cli"
version = "0.1.0"
edition = "2021"
repository = "https://miguoliang.github.com/chatbot-cli"
authors = ["Mi Guoliang <boymgl@qq.com>"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.9", features = ["derive"] }
crossterm = "0.27.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.14"
